[gd_scene load_steps=8 format=3 uid="uid://b5t3rxq3wrmhb"]

[ext_resource type="Script" path="res://scenes/car.gd" id="1_2jm02"]
[ext_resource type="Texture2D" uid="uid://dprd3g4gw1i64" path="res://resources/graphics/car/main.png" id="1_qdmcn"]
[ext_resource type="Texture2D" uid="uid://bo3dnqeordm6x" path="res://resources/graphics/car/turret.png" id="3_pxe2q"]
[ext_resource type="Texture2D" uid="uid://c1jpf1eoyxlt4" path="res://resources/graphics/explosions/gun.png" id="4_5hp2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_da41m"]
radius = 625.353

[sub_resource type="Animation" id="Animation_eukg6"]
resource_name = "laser_load"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprites:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.9, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FireSprites:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.9, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6s0o1"]
_data = {
"laser_load": SubResource("Animation_eukg6")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_2jm02")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array(-232, -176, -99, -184, -33, -139, 17, -177, 122, -177, 145, -172, 180, -122, 193, -72, 195, 82, 180, 130, 139, 170, 108, 175, -3, 170, -14, 132, -69, 131, -94, 176, -165, 189, -237, 173, -236, 105, -241, 56, -307, 43, -304, -48, -240, -58)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_qdmcn")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_da41m")

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
rotation = 1.5708
texture = ExtResource("3_pxe2q")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(110, -27)
target_position = Vector2(511, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(0, 0, 509, 0)
width = 0.0
default_color = Color(0.670588, 0, 0, 0.658824)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(110, 29)
target_position = Vector2(511, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, 0)
width = 0.0
default_color = Color(0.670588, 0, 0, 0.658824)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6s0o1")
}

[node name="FireSprites" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="nozzle1" type="Sprite2D" parent="FireSprites"]
position = Vector2(143, -28)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5hp2m")

[node name="nozzle2" type="Sprite2D" parent="FireSprites"]
position = Vector2(141, 29)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5hp2m")

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
